//------------------------------------------------------------------------------
// {C} Copyright 2018 Pensando Systems Inc. All rights reserved
// This file contains metrics published to Delphi
//------------------------------------------------------------------------------

syntax = "proto3";
package metrics;

import "delphi.proto";
import "metrics_annotations.proto";

message MacMetrics {
    option (venice.metricInfo) = {
        DisplayName: "Port Packet Statistics",
        Description: "Key index - PORT ID",
        Scope: PerPort,
        Tags: [ Level7 ]
    };
    fixed32             Key                     = 1;    // Port id
    delphi.Counter      frames_rx_ok            = 2;
    delphi.Counter      frames_rx_all           = 3;
    delphi.Counter      frames_rx_bad_fcs       = 4;
    delphi.Counter      frames_rx_bad_all       = 5;
    delphi.Counter      octets_rx_ok            = 6;
    delphi.Counter      octets_rx_all           = 7;
    delphi.Counter      frames_rx_unicast       = 8;
    delphi.Counter      frames_rx_multicast     = 9;
    delphi.Counter      frames_rx_broadcast     = 10;
    delphi.Counter      frames_rx_pause         = 11;
    delphi.Counter      frames_rx_bad_length    = 12;
    delphi.Counter      frames_rx_undersized    = 13;
    delphi.Counter      frames_rx_oversized     = 14;
    delphi.Counter      frames_rx_fragments     = 15;
    delphi.Counter      frames_rx_jabber        = 16;
    delphi.Counter      frames_rx_pripause      = 17;
    delphi.Counter      frames_rx_stomped_crc   = 18;
    delphi.Counter      frames_rx_too_long      = 19;
    delphi.Counter      frames_rx_vlan_good     = 20;
    delphi.Counter      frames_rx_dropped       = 21;
    delphi.Counter      frames_rx_less_than_64b = 22;
    delphi.Counter      frames_rx_64b           = 23;
    delphi.Counter      frames_rx_65b_127b      = 24;
    delphi.Counter      frames_rx_128b_255b     = 25;
    delphi.Counter      frames_rx_256b_511b     = 26;
    delphi.Counter      frames_rx_512b_1023b    = 27;
    delphi.Counter      frames_rx_1024b_1518b   = 28;
    delphi.Counter      frames_rx_1519b_2047b   = 29;
    delphi.Counter      frames_rx_2048b_4095b   = 30;
    delphi.Counter      frames_rx_4096b_8191b   = 31;
    delphi.Counter      frames_rx_8192b_9215b   = 32;
    delphi.Counter      frames_rx_other         = 33;
    delphi.Counter      frames_tx_ok            = 34;
    delphi.Counter      frames_tx_all           = 35;
    delphi.Counter      frames_tx_bad           = 36;
    delphi.Counter      octets_tx_ok            = 37;
    delphi.Counter      octets_tx_total         = 38;
    delphi.Counter      frames_tx_unicast       = 39;
    delphi.Counter      frames_tx_multicast     = 40;
    delphi.Counter      frames_tx_broadcast     = 41;
    delphi.Counter      frames_tx_pause         = 42;
    delphi.Counter      frames_tx_pripause      = 43;
    delphi.Counter      frames_tx_vlan          = 44;
    delphi.Counter      frames_tx_less_than_64b = 45;
    delphi.Counter      frames_tx_64b           = 46;
    delphi.Counter      frames_tx_65b_127b      = 47;
    delphi.Counter      frames_tx_128b_255b     = 48;
    delphi.Counter      frames_tx_256b_511b     = 49;
    delphi.Counter      frames_tx_512b_1023b    = 50;
    delphi.Counter      frames_tx_1024b_1518b   = 51;
    delphi.Counter      frames_tx_1519b_2047b   = 52;
    delphi.Counter      frames_tx_2048b_4095b   = 53;
    delphi.Counter      frames_tx_4096b_8191b   = 54;
    delphi.Counter      frames_tx_8192b_9215b   = 55;
    delphi.Counter      frames_tx_other         = 56;
    delphi.Counter      frames_tx_pri_0         = 57;
    delphi.Counter      frames_tx_pri_1         = 58;
    delphi.Counter      frames_tx_pri_2         = 59;
    delphi.Counter      frames_tx_pri_3         = 60;
    delphi.Counter      frames_tx_pri_4         = 61;
    delphi.Counter      frames_tx_pri_5         = 62;
    delphi.Counter      frames_tx_pri_6         = 63;
    delphi.Counter      frames_tx_pri_7         = 64;
    delphi.Counter      frames_rx_pri_0         = 65;
    delphi.Counter      frames_rx_pri_1         = 66;
    delphi.Counter      frames_rx_pri_2         = 67;
    delphi.Counter      frames_rx_pri_3         = 68;
    delphi.Counter      frames_rx_pri_4         = 69;
    delphi.Counter      frames_rx_pri_5         = 70;
    delphi.Counter      frames_rx_pri_6         = 71;
    delphi.Counter      frames_rx_pri_7         = 72;
    delphi.Counter      tx_pripause_0_1us_count = 73;
    delphi.Counter      tx_pripause_1_1us_count = 74;
    delphi.Counter      tx_pripause_2_1us_count = 75;
    delphi.Counter      tx_pripause_3_1us_count = 76;
    delphi.Counter      tx_pripause_4_1us_count = 77;
    delphi.Counter      tx_pripause_5_1us_count = 78;
    delphi.Counter      tx_pripause_6_1us_count = 79;
    delphi.Counter      tx_pripause_7_1us_count = 80;
    delphi.Counter      rx_pripause_0_1us_count = 81;
    delphi.Counter      rx_pripause_1_1us_count = 82;
    delphi.Counter      rx_pripause_2_1us_count = 83;
    delphi.Counter      rx_pripause_3_1us_count = 84;
    delphi.Counter      rx_pripause_4_1us_count = 85;
    delphi.Counter      rx_pripause_5_1us_count = 86;
    delphi.Counter      rx_pripause_6_1us_count = 87;
    delphi.Counter      rx_pripause_7_1us_count = 88;
    delphi.Counter      rx_pause_1us_count      = 89;
    delphi.Counter      frames_tx_truncated     = 90;
}
